--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -1329,7 +1329,7 @@ section {
   padding: 15px 0;
   background: #f6f6f6;
   min-height: 40px;
-  margin-top: 72px;
+  margin-top: 5rem;
 }
 
 .breadcrumbs h2 {
