--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -834,7 +834,8 @@ section {
   position: relative;
   overflow: hidden;
   z-index: 1;
-  background: rgba(42, 42, 42, 0.7);
+  /* background: rgba(42, 42, 42, 0.7); */
+  background: rgba(42, 42, 42, 0.1);
 }
 
 .portfolio .portfolio-wrap::before {
